syntax = "proto3";
package twitter;

option go_package = "proto/proto";

message Tweet {
    string body = 1;
}

message Comment {
    string body = 1;
}

service TweetService {
    rpc SayHello(Tweet) returns (Tweet) {}
}

service CommentService {
    rpc SayHello(Comment) returns (Comment) {}
}


// â†“lamppost timestamp
message AskForTimeMessage {
    int64 clientId = 1;
}

message ReplyTimeMessage {
    string serverName = 1;
    string time = 2;
}

service TimeAsk {
    rpc AskForTime(AskForTimeMessage) returns (ReplyTimeMessage) {}
}

